# lifeos

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  lifeos.service  pyproject.toml  start.sh
app/: database.py  main.py
app/models/: __init__.py  domain.py  goal.py  plan.py  recurring.py  task.py
app/routers/: api.py  pages.py
app/schemas/: __init__.py  domain.py  goal.py  plan.py  recurring.py  task.py
app/services/: domain_service.py  goal_service.py  plan_service.py  recurring_service.py  task_service.py
app/static/: style.css
app/templates/: base.html  dashboard.html  domain_detail.html  goal_detail.html  plan_detail.html  today.html  upcoming.html
app/templates/partials/: goal_list.html  plan_list.html  recurring_plan_list.html  subtask_list.html  task_list.html
db/migrations/: env.py
db/migrations/versions/: 63dacdfb4103_initial_schema.py  a1b2c3d4e5f6_add_recurring_plans.py
docs/: API.md  SECURITY.md  USER_GUIDE.md
tests/integration/: test_api.py
